A BUNCH Of Stuff (including a better algorithm)

--- a/dash/index.html
+++ b/dash/index.html
@@ -1,34 +1,87 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Convention 22</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
 
-        <link rel="stylesheet" href="jquery.terminal-2.34.0.min.css" />
+    <div class="positions" id="positions">
+        <div class="box">
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+        </div>
+        <div class="box">
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+        </div>
+        <div class="box">
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+        </div>
+        <div class="box lowerbox">
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+        </div>
+        <div class="box lowerbox">
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+        </div>
+        <div class="box lowerbox">
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+            <div class="boximg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage"/></div>
+        </div>
+    </div>
+    
+    <div id="partnr"></div>
+    <div class="boximg lowerimg"><img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" class="boximage" id="image"/></div>
+    <div id="pos"></div>
 
-        <script src="jquery-3.6.1.slim.min.js" defer></script>
-        <script src="jquery.terminal-2.34.0.min.js" defer></script>
-        <script src="webcam-easy.min.js" defer></script>
-        <script src="index.js" defer></script>
-
-        <style>
-            body {
-                margin: 0;
-            }
-
-            #cam {
-                position: fixed;
-                top: 2em;
-                right: 2em;
-                background-color: dimgray;
-                border-radius: 5px;
-                width: 200px;
-                height: 150px;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="term" style="width: 100vw; height: 100vh; background: black; position: fixed"></div>
-        <video id="cam"></video>
-        <canvas id="can" style="opacity: 0;pointer-events: none;position: absolute;"></canvas>
-    </body>
+    <script src="index.js"></script>
+</body>
 </html>
